sol.h

#define sol sol_inline
  typedef long double Float;
  typedef double Float;
  typedef float Float;
  //////////////////////////////////////////////////////////////////////////////
 // Math Constants ////////////////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

/// sol_pi ///
// Description
//   The constant used to equal the value of Pi for Sol's internal calculations.

static const Float sol_pi = ((Float)(3.14159265358979323846));
/// sol_tau ///
// Description
//   A constant which is equal to two times the value of Pi for Sol's internal
//   calculations.

static const Float sol_tau = ((Float)(6.28318530717958647692));
/// sol_g ///
// Description
//   A constant which is equal to the acceleration of gravity in m/s/s.

static const Float sol_g = ((Float)(9.80665));
/// sol_c ///
// Description
//   A constant which is equal to the speed of light in m/s.

static const Float sol_c = ((Float)(299792000));
  //////////////////////////////////////////////////////////////////////////////
 // Struct Type Definitions ///////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

/// Vec2 ///
// Description
//   A type comprised of two floats to represent a 2D vector or position.
// Fields
//   x: Dimension (Float)
//   y: Dimension (Float)
//   f: Dimensions (Float[2])

typedef struct {
  union {
    struct {
      Float x, y;
    };
    Float f[2];
    #if defined(SOL_AVX_64)
      __m128d avx64;
    #elif defined(SOL_AVX_32)
      __m128 avx32;
    #elif defined(SOL_NEON_64)
      f64x2_t neon64;
    #elif defined(SOL_NEON_32)
      f32x2_t neon32;
    #endif
  };
} Vec2;
/// Vec3 ///
// Description
//   A type comprised of three floats to represent a 3D vector or position.
// Fields
//   x: Dimension (sol_f)
//   y: Dimension (sol_f)
//   z: Dimension (sol_F)
//   f: Dimensions (Float[3])

typedef struct {
  union {
    struct {
      Float x, y, z;
    };
    Float f[3];
    #if defined(SOL_AVX_64)
      __m256d avx64;
    #elif defined(SOL_AVX_32)
      __m128 avx32;
    #elif defined(SOL_NEON_64)
      f64x4_t neon64;
    #elif defined(SOL_NEON_32)
      f32x4_t neon32;
    #endif
  };
} Vec3;
/// Vec4 ///
// Description
//   A type comprised of four floats to represent a quaternion or axis/angle
//   rotation.
// Fields
//   x: Dimension (Float)
//   y: Dimension (Float)
//   z: Dimension (Float)
//   w: Dimension (Float)
//   f: Dimensions (Float[4])

typedef struct {
  union {
    struct {
      Float x, y, z, w;
    };
    Float f[4];
    #if defined(SOL_AVX_64)
      __m256d avx64;
    #elif defined(SOL_AVX)
      __m128 avx32;
    #elif defined(SOL_NEON_64)
      f64x4_t neon64;
    #elif defined(SOL_NEON)
      f32x4_t neon32;
    #endif
  };
} Vec4;
/// Ray2 ///
// Description
//   A type comprised of a 2D position and vector pair which represent
//   a ray.
// Fields
//   pos: Position (Vec2)
//   vec: Vector (Vec2)

typedef struct {
  Vec2 pos, vec;
} Ray2;
/// Ray3 ///
// Description
//   A type comprised of a 3D position and vector pair which represent
//   a ray.
// Fields
//   pos: Position (Vec3)
//   vec: Vector (Vec3)

typedef struct {
  Vec3 pos, vec;
} Ray3;
  //////////////////////////////////////////////////////////////////////////////
 // Vec3 Function Declarations ////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

Vec3 vec3_init(Float x, Float y, Float z);
Vec3 vec3_norm(Vec3 v);
Float vec3_mag(Vec3 v);
bool vec3_eq(Vec3 a, Vec3 b, Float ep);
Vec3 vec3_rot(Vec3 v, Vec4 aa);
Vec3 vec3_rotq(Vec3 v, Vec4 q);
Vec3 vec3_proj(Vec3 a, Vec3 b);
Vec3 vec3_rej(Vec3 a, Vec3 b);
Vec3 vec3_cross(Vec3 a, Vec3 b);
Float vec3_dot(Vec3 a, Vec3 b);
Float vec3_sum(Vec3 v);
Vec3 vec3_fma(Vec3 a, Vec3 b, Vec3 c);
Vec3 vec3_add(Vec3 a, Vec3 b);
Vec3 vec3_addf(Vec3 v, Float f);
Vec3 vec3_sub(Vec3 a, Vec3 b);
Vec3 vec3_subf(Vec3 v, Float f);
Vec3 vec3_fsub(Float f, Vec3 v);
Vec3 vec3_mul(Vec3 a, Vec3 b);
Vec3 vec3_mulf(Vec3 v, Float f);
Vec3 vec3_div(Vec3 a, Vec3 b);
Vec3 vec3_divf(Vec3 v, Float f);
Vec3 vec3_fdiv(Float f, Vec3 v);
Vec3 vec3_pow(Vec3 a, Vec3 b);
Vec3 vec3_powf(Vec3 v, Float f);
Vec3 vec3_fpow(Float f, Vec3 v);
Vec3 vec3_avg(Vec3 a, Vec3 b);
Vec3 vec3_avgf(Vec3 v, Float f);
void vec3_print(Vec3 v);
  //////////////////////////////////////////////////////////////////////////////
 // Vec4 Function Declarations ////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

Vec4 vec4_init(Float x, Float y, Float z, Float w);
Vec4 vec4_initf(Float f);
Vec4 vec4_zero(void);
Vec4 vec4_norm(Vec4 v);
Float vec4_mag(Vec4 v);
bool vec4_eq(Vec4 a, Vec4 b, Float ep);
Float vec4_sum(Vec4 v);
Vec4 vec4_fma(Vec4 a, Vec4 b, Vec4 c);
Vec4 vec4_add(Vec4 a, Vec4 b);
Vec4 vec4_addf(Vec4 v, Float f);
Vec4 vec4_sub(Vec4 a, Vec4 b);
Vec4 vec4_subf(Vec4 v, Float f);
Vec4 vec4_fsub(Float f, Vec4 v);
Vec4 vec4_mul(Vec4 a, Vec4 b);
Vec4 vec4_mulf(Vec4 v, Float f);
Vec4 vec4_div(Vec4 a, Vec4 b);
Vec4 vec4_divf(Vec4 v, Float f);
Vec4 vec4_fdiv(Float f, Vec4 v);
Vec4 vec4_avg(Vec4 a, Vec4 b);
Vec4 vec4_avgf(Vec4 v, Float f);
void vec4_print(Vec4 v);
  //////////////////////////////////////////////////////////////////////////////
 // Ray2 Function Declarations ////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

Ray2 ray2_init(Vec2 pos, Vec2 vec);
Ray2 ray2_initv(Vec2 v);
Ray2 ray2_initf(Float f);
Ray2 ray2_zero(void);
Ray2 ray2_norm(Ray2 r);
Float ray2_mag(Ray2 r);
bool ray2_eq(Ray2 a, Ray2 b, Float ep);
Ray2 ray2_rot(Ray2 r, Float deg);
Ray2 ray2_rotr(Ray2 r, Float rad);
Ray2 ray2_addp(Ray2 r, Vec2 p);
Ray2 ray2_addpf(Ray2 r, Float f);
Ray2 ray2_addv(Ray2 r, Vec2 v);
Ray2 ray2_addvf(Ray2 r, Float f);
Ray2 ray2_subp(Ray2 r, Vec2 p);
Ray2 ray2_subpf(Ray2 r, Float f);
Ray2 ray2_psub(Vec2 p, Ray2 r);
Ray2 ray2_pfsub(Float f, Ray2 r);
Ray2 ray2_subv(Ray2 r, Vec2 v);
Ray2 ray2_subvf(Ray2 r, Float f);
Ray2 ray2_vsub(Vec2 v, Ray2 r);
Ray2 ray2_vfsub(Float f, Ray2 r);
Ray2 ray2_mulp(Ray2 r, Vec2 p);
Ray2 ray2_mulpf(Ray2 r, Float f);
Ray2 ray2_mulv(Ray2 r, Vec2 v);
Ray2 ray2_mulvf(Ray2 r, Float f);
Ray2 ray2_divp(Ray2 r, Vec2 p);
Ray2 ray2_divpf(Ray2 r, Float f);
Ray2 ray2_pdiv(Vec2 p, Ray2 r);
Ray2 ray2_pfdiv(Float f, Ray2 r);
Ray2 ray2_divv(Ray2 r, Vec2 v);
Ray2 ray2_divvf(Ray2 r, Float f);
Ray2 ray2_vdiv(Vec2 v, Ray2 r);
Ray2 ray2_vfdiv(Float f, Ray2 r);
Ray2 ray2_avgp(Ray2 r, Vec2 p);
Ray2 ray2_avgpf(Ray2 r, Float f);
Ray2 ray2_avgv(Ray2 r, Vec2 v);
Ray2 ray2_avgvf(Ray2 r, Float f);
  //////////////////////////////////////////////////////////////////////////////
 // Ray3 Function Declarations ////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

Ray3 ray3_init(Vec3 pos, Vec3 vec);
Ray3 ray3_initv(Vec3 v);
Ray3 ray3_initf(Float f);
Ray3 ray3_zero(void);
Ray3 ray3_norm(Ray3 r);
Float ray3_mag(Ray3 r);
bool ray3_eq(Ray3 a, Ray3 b, Float ep);
Ray3 ray3_rot(Ray3 r, Vec4 aa);
Ray3 ray3_rotq(Ray3 r, Vec4 q);