sol.nim


proc vec3_sum*(v: Vec3): Float           {.importc: "vec3_sum",  header: "sol.h".}
proc vec3_fma*(a, b, c: Vec3): Vec3      {.importc: "vec3_fma",  header: "sol.h".}
proc vec3_add*(a, b: Vec3): Vec3         {.importc: "vec3_add",  header: "sol.h".}
proc vec3_addf*(v: Vec3, f: Float): Vec3 {.importc: "vec3_addf", header: "sol.h".}
proc vec3_sub*(a, b: Vec3): Vec3         {.importc: "vec3_sub",  header: "sol.h".}
proc vec3_subf*(v: Vec3, f: Float): Vec3 {.importc: "vec3_subf", header: "sol.h".}
proc vec3_fsub*(f: Float, v: Vec3): Vec3 {.importc: "vec3_fsub", header: "sol.h".}
proc vec3_mul*(a, b: Vec3): Vec3         {.importc: "vec3_mul",  header: "sol.h".}
proc vec3_mulf*(v: Vec3, f: Float): Vec3 {.importc: "vec3_mulf", header: "sol.h".}
proc vec3_div*(a, b: Vec3): Vec3         {.importc: "vec3_div",  header: "sol.h".}
proc vec3_divf*(v: Vec3, f: Float): Vec3 {.importc: "vec3_divf", header: "sol.h".}
proc vec3_fdiv*(f: Float, v: Vec3): Vec3 {.importc: "vec3_fdiv", header: "sol.h".}
proc vec3_pow*(a, b: Vec3): Vec3         {.importc: "vec3_pow",  header: "sol.h".}
proc vec3_powf*(v: Vec3; f: Float): Vec3 {.importc: "vec3_powf", header: "sol.h".}
proc vec3_fpow*(f: Float; v: Vec3): Vec3 {.importc: "vec3_fpow", header: "sol.h".}
proc vec3_avg*(a, b: Vec3): Vec3         {.importc: "vec3_avg",  header: "sol.h".}
proc vec3_avgf*(v: Vec3, f: Float): Vec3 {.importc: "vec3_avgf", header: "sol.h".}

proc vec3_print*(v: Vec3): void {.importc: "vec3_print", header: "sol.h".}

################################################################################
# Vec3 Operators ###############################################################
################################################################################

template vec*(x, y, z: Float): Vec3 = vec3_init(x, y, z)

template norm*(v: Vec3): Vec3    = vec3_norm(v)
template mag*(v: Vec3): Float    = vec3_mag(v)
template `==`*(a, b: Vec3): bool = vec3_eq(a, b)

template `rot`*(v: Vec3; aa: Vec4): Vec3 = vec3_rot(v, aa)
template `rotq`*(v: Vec3; q: Vec4): Vec3 = vec3_rotq(v, q)

template `proj`*(a, b: Vec3): Vec3  = vec3_proj(a, b)
template `rej`*(a, b: Vec3): Vec3   = vec3_rej(a, b)
template `cross`*(a, b: Vec3): Vec3 = vec3_cross(a, b)
template `dot`*(a, b: Vec3): Float  = vec3_dot(a, b)

template `+`*(a, b: Vec3): Vec3        = vec3_add(a, b)
template `+`*(v: Vec3; f: Float): Vec3 = vec3_addf(v, f)
template `+`*(f: Float; v: Vec3): Vec3 = vec3_addf(v, f)
template `-`*(a, b: Vec3): Vec3        = vec3_sub(a, b)
template `-`*(v: Vec3; f: Float): Vec3 = vec3_subf(v, f)
template `-`*(f: Float; v: Vec3): Vec3 = vec3_fsub(f, v)
template `*`*(a, b: Vec3): Vec3        = vec3_mul(a, b)
template `*`*(v: Vec3; f: Float): Vec3 = vec3_mulf(v, f)
template `*`*(f: Float; v: Vec3): Vec3 = vec3_mulf(v, f)
template `/`*(a, b: Vec3): Vec3        = vec3_div(a, b)
template `/`*(v: Vec3; f: Float): Vec3 = vec3_divf(v, f)
template `/`*(f: Float; v: Vec3): Vec3 = vec3_fdiv(f, v)

template `+=`*(a: var Vec3; b: Vec3)  = a = vec3_add(a, b)
template `+=`*(v: var Vec3; f: Float) = v = vec3_addf(v, f)
template `-=`*(a: var Vec3; b: Vec3)  = a = vec3_sub(a, b)
template `-=`*(v: var Vec3; f: Float) = v = vec3_subf(v, f)
template `*=`*(a: var Vec3; b: Vec3)  = a = vec3_mul(a, b)
template `*=`*(v: var Vec3; f: Float) = v = vec3_mulf(v, f)
template `/=`*(a: var Vec3; b: Vec3)  = a = vec3_div(a, b)
template `/=`*(v: var Vec3; f: Float) = v = vec3_divf(v, f)

################################################################################
# Vec4 Functions ###############################################################
################################################################################

proc vec4_init*(x, y, z, w: Float): Vec4 {.importc: "vec4_init",  header: "sol.h".}
proc vec4_initf*(f: Float): Vec4         {.importc: "vec4_initf", header: "sol.h".}
proc vec4_zero*(): Vec4                  {.importc: "vec4_zero",  header: "sol.h".}

proc vec4_norm*(v: Vec4): Vec4             {.importc: "vec4_norm", header: "sol.h".}
proc vec4_mag*(v: Vec4): Float             {.importc: "vec4_mag",  header: "sol.h".}
proc vec4_eq*(a, b: Vec4; ep: Float): bool {.importc: "vec4_eq",   header: "sol.h".}

proc vec4_sum*(v: Vec4): Float           {.importc: "vec4_sum",  header: "sol.h".}
proc vec4_fma*(a, b, c: Vec4): Vec4      {.importc: "vec4_fma",  header: "sol.h".}
proc vec4_add*(a, b: Vec4): Vec4         {.importc: "vec4_add",  header: "sol.h".}
proc vec4_addf*(v: Vec4; f: Float): Vec4 {.importc: "vec4_addf", header: "sol.h".}
proc vec4_sub*(a, b: Vec4): Vec4         {.importc: "vec4_sub",  header: "sol.h".}
proc vec4_subf*(v: Vec4; f: Float): Vec4 {.importc: "vec4_subf", header: "sol.h".}
proc vec4_fsub*(f: Float; v: Vec4): Vec4 {.importc: "vec4_fsub", header: "sol.h".}
proc vec4_mul*(a, b: Vec4): Vec4         {.importc: "vec4_mul",  header: "sol.h".}
proc vec4_mulf*(v: Vec4; f: Float): Vec4 {.importc: "vec4_mulf", header: "sol.h".}
proc vec4_div*(a, b: Vec4): Vec4         {.importc: "vec4_div",  header: "sol.h".}
proc vec4_divf*(v: Vec4; f: Float): Vec4 {.importc: "vec4_divf", header: "sol.h".}
proc vec4_fdiv*(f: Float; v: Vec4): Vec4 {.importc: "vec4_fdiv", header: "sol.h".}
proc vec4_avg*(a, b: Vec4): Vec4         {.importc: "vec4_avg",  header: "sol.h".}
proc vec4_avgf*(v: Vec4, f: Float): Vec4 {.importc: "vec4_avgf", header: "sol.h".}

proc vec4_print*(v: Vec4): void {.importc: "vec4_print", header: "sol.h".}

################################################################################
# Vec4 Operators ###############################################################
################################################################################

template `+`*(a, b: Vec4): Vec4        = vec4_add(a, b)
template `+`*(v: Vec4; f: Float): Vec4 = vec4_addf(v, f)
template `+`*(f: Float; v: Vec4): Vec4 = vec4_addf(v, f)
template `-`*(a, b: Vec4): Vec4        = vec4_sub(a, b)
template `-`*(v: Vec4; f: Float): Vec4 = vec4_subf(v, f)
template `-`*(f: Float; v: Vec4): Vec4 = vec4_fsub(f, v)
template `*`*(a, b: Vec4): Vec4        = vec4_mul(a, b)
template `*`*(v: Vec4; f: Float): Vec4 = vec4_mulf(v, f)
template `*`*(f: Float; v: Vec4): Vec4 = vec4_mulf(v, f)
template `/`*(a, b: Vec4): Vec4        = vec4_div(a, b)
template `/`*(v: Vec4; f: Float): Vec4 = vec4_divf(v, f)
template `/`*(f: Float; v: Vec4): Vec4 = vec4_fdiv(f, v)

template `+=`*(a: var Vec4; b: Vec4)  = a = vec4_add(a, b)
template `+=`*(v: var Vec4; f: Float) = v = vec4_addf(v, f)
template `-=`*(a: var Vec4; b: Vec4)  = a = vec4_sub(a, b)
template `-=`*(v: var Vec4; f: Float) = v = vec4_subf(v, f)
template `*=`*(a: var Vec4; b: Vec4)  = a = vec4_mul(a, b)
template `*=`*(v: var Vec4; f: Float) = v = vec4_mulf(v, f)
template `/=`*(a: var Vec4; b: Vec4)  = a = vec4_div(a, b)
template `/=`*(v: var Vec4; f: Float) = v = vec4_divf(v, f)

################################################################################
# Ray2 Functions ###############################################################
################################################################################

proc ray2_init*(pos, vec: Vec2): Ray2 {.importc: "ray2_init",  header: "sol.h".}
proc ray2_initv*(v: Vec2): Ray2       {.importc: "ray2_initv", header: "sol.h".}
proc ray2_initf*(f: Float): Ray2      {.importc: "ray2_initf", header: "sol.h".}
proc ray2_zero*(): Ray2               {.importc: "ray2_zero",  header: "sol.h".}

proc ray2_norm*(r: Ray2): Ray2             {.importc: "ray2_norm", header: "sol.h".}
proc ray2_mag*(r: Ray2): Float             {.importc: "ray2_mag",  header: "sol.h".}
proc ray2_eq*(a, b: Ray2; ep: Float): bool {.importc: "ray2_eq",   header: "sol.h".}

proc ray2_rot*(r: Ray2; deg: Float): Ray2  {.importc: "ray2_rot",  header: "sol.h".}
proc ray2_rotr*(r: Ray2; rad: Float): Ray2 {.importc: "ray2_rotr", header: "sol.h".}

proc ray2_addp*(r: Ray2; p: Vec2): Ray2   {.importc: "ray2_addp",  header: "sol.h".}
proc ray2_addpf*(r: Ray2; f: Float): Ray2 {.importc: "ray2_addpf", header: "sol.h".}
proc ray2_addv*(r: Ray2; v: Vec2): Ray2   {.importc: "ray2_addv",  header: "sol.h".}
proc ray2_addvf*(r: Ray2; f: Float): Ray2 {.importc: "ray2_addvf", header: "sol.h".}
proc ray2_subp*(r: Ray2; p: Vec2): Ray2   {.importc: "ray2_subp",  header: "sol.h".}
proc ray2_subpf*(r: Ray2; f: Float): Ray2 {.importc: "ray2_subpf", header: "sol.h".}
proc ray2_psub*(p: Vec2; r: Ray2): Ray2   {.importc: "ray2_psub",  header: "sol.h".}
proc ray2_pfsub*(f: Float; r: Ray2): Ray2 {.importc: "ray2_pfsub", header: "sol.h".}
proc ray2_subv*(r: Ray2; v: Vec2): Ray2   {.importc: "ray2_subv",  header: "sol.h".}
proc ray2_subvf*(r: Ray2; f: Float): Ray2 {.importc: "ray2_subvf", header: "sol.h".}
proc ray2_vsub*(v: Vec2; r: Ray2): Ray2   {.importc: "ray2_vsub",  header: "sol.h".}
proc ray2_vfsub*(f: Float; r: Ray2): Ray2 {.importc: "ray2_vfsub", header: "sol.h".}
proc ray2_mulp*(r: Ray2; p: Vec2): Ray2   {.importc: "ray2_mulp",  header: "sol.h".}
proc ray2_mulpf*(r: Ray2; f: Float): Ray2 {.importc: "ray2_mulpf", header: "sol.h".}
proc ray2_mulv*(r: Ray2; v: Vec2): Ray2   {.importc: "ray2_mulv",  header: "sol.h".}
proc ray2_mulvf*(r: Ray2; f: Float): Ray2 {.importc: "ray2_mulvf", header: "sol.h".}
proc ray2_divp*(r: Ray2; p: Vec2): Ray2   {.importc: "ray2_divp",  header: "sol.h".}
proc ray2_divpf*(r: Ray2; f: Float): Ray2 {.importc: "ray2_divpf", header: "sol.h".}
proc ray2_pdiv*(p: Vec2; r: Ray2): Ray2   {.importc: "ray2_pdiv",  header: "sol.h".}
proc ray2_pfdiv*(f: Float; r: Ray2): Ray2 {.importc: "ray2_pfdiv", header: "sol.h".}
proc ray2_divv*(r: Ray2; v: Vec2): Ray2   {.importc: "ray2_divv",  header: "sol.h".}
proc ray2_divvf*(r: Ray2; f: Float): Ray2 {.importc: "ray2_divvf", header: "sol.h".}
proc ray2_vdiv*(v: Vec2; r: Ray2): Ray2   {.importc: "ray2_vdiv",  header: "sol.h".}
proc ray2_vfdiv*(f: Float; r: Ray2): Ray2 {.importc: "ray2_vfdiv", header: "sol.h".}

proc ray2_avgp*(r: Ray2; p: Vec2): Ray2   {.importc: "ray2_avgp",  header: "sol.h".}
proc ray2_avgpf*(r: Ray2; f: Float): Ray2 {.importc: "ray2_avgpf", header: "sol.h".}
proc ray2_avgv*(r: Ray2; v: Vec2): Ray2   {.importc: "ray2_avgv",  header: "sol.h".}
proc ray2_avgvf*(r: Ray2; f: Float): Ray2 {.importc: "ray2_avgvf", header: "sol.h".}

################################################################################
# Ray3 Functions ###############################################################
################################################################################

proc ray3_init*(pos, vec: Vec3): Ray3 {.importc: "ray3_init",  header: "sol.h".}
proc ray3_initv*(v: Vec3): Ray3       {.importc: "ray3_initv", header: "sol.h".}
proc ray3_initf*(f: Float): Ray3      {.importc: "ray3_initf", header: "sol.h".}
proc ray3_zero*(): Ray3               {.importc: "ray3_zero",  header: "sol.h".}

proc ray3_norm*(r: Ray3): Ray3             {.importc: "ray3_norm", header: "sol.h".}
proc ray3_mag*(r: Ray3): Float             {.importc: "ray3_mag",  header: "sol.h".}
proc ray3_eq*(a, b: Ray3; ep: Float): bool {.importc: "ray3_eq",   header: "sol.h".}

proc ray3_rot*(r: Ray3; aa: Vec4): Ray3 {.importc: "ray3_rot",  header: "sol.h".}
proc ray3_rotq*(r: Ray3; q: Vec4): Ray3 {.importc: "ray3_rotq", header: "sol.h".}
